--- a/Italiano/about-IT.html
+++ b/Italiano/about-IT.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -74,10 +74,10 @@
         <div class="navbar-menu container collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="../Italiano//index-IT.html" class="nav-link">Home</a>
+                    <a class="nav-link active text-white" aria-current="page" href="../Italiano/index-IT.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="../Italiano/about-IT.html" class="nav-link">Sobre mi</a>
+                    <a class="nav-link text-white" href="../Italiano/about-IT.html" class="nav-link">Su di me</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="" 
@@ -86,21 +86,21 @@
                     </a> 
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="../Italiano/vertigo-IT.html">Vertigo</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//cva-IT.html">CVA SA</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//interieur-IT.html">Interieur Forma</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//bikes-IT.html">Biciletero</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//coco-IT.html">Leche de coco</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//dandii-IT.html">Dandii</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//renders-IT.html">Modelado 3D & Renders</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//upa-IT.html">Upa!</a></li>
-                        <li><a class="dropdown-item" href="../Italiano//portfolio-IT.html">Ver todo</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/cva-IT.html">CVA SA</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/interieur-IT.html">Interieur Forma</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/bikes-IT.html">Portabiciclette</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/coco-IT.html">Latte di cocco</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/dandii-IT.html">Dandii</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/renders-IT.html">Modellazione 3D e Renderss</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/upa-IT.html">Upa!</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/portfolio-IT.html">Vedere tutto</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#skills" class="nav-link">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#footer" class="nav-link">Contacto</a>
+                    <a class="nav-link text-white" href="#footer" class="nav-link">Contactto</a>
                 </li>
             </ul>
         </div>
@@ -125,158 +125,67 @@
         </nav>    
         <!--========= FIN Menu=========-->
 
-
-        <!--=========Cuerpo=========-->
-        <main id="home container-fluid">
-            <!--=========Encabezado=========-->
-            <section  id="title" class="title container-fluid">
-                <h1 class="name subpage">Sobre mi</h1>
-                <h2 class="subName"></h2>
-            </section>
-            <!--=========FIN Encabezado=========-->
-            <!--=======Breadcrumbs=======-->                          
-            <nav aria-label="breadcrumb" class="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index-IT.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Sobre mi</li>
-                </ol>
-            </nav>          
-            <!--=======FIN Breadcrumbs=======-->
-            <!--=======About Section=======-->
-            <section id="about" class="about">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <img src="../img/me.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="col-lg-6">
-                            <h3>Un poco de mi</h3>
-                            <p>
-                                Naci y creci en Buenos Aires, Argentina. Alli me dedique a estudiar Diseño Industriall en la Universidad de Buenos. Siempre ame viajar y conocer otras culturas.
-                                A principios de 2020 decidi aventurarme e irme a vivir a Dinamarca con la meta de estudiar y vivir el diseño escandinavo. Gracias a la pandemia, y mi curiosidad, 
-                                empece a estudiar online diseño de UX/UX y Web Development/front end. Disfruto aprendiendo nuevas cosas todos los dias, especialmente lo relacionados a la
-                                tecnologia y las computadoras. Me encantan todas las ramas de mi profesión, desde bocetar, hasta el modelado 2D / 3D y la ,creación de prototipos. 
-                                En mi experiencia, no hay mayor alegría que ver un proyecto materializado. He trabajado en esta industria por más de seis años y el proceso creativo 
-                                nunca deja de sorprenderme. Mi portfolio incluye una amplia variedad de trabajos, bocetos hasta prototipos. ¡Gracias por tu visita!
-                            </p>               
-                        </div>                    
-                    </div>
+    <!--=========Cuerpo=========-->
+    <main id="home">
+        <!--=========Encabezado=========-->
+        <section  id="title" class="title container-fluid bg-light">
+            <h1 class="name"><img class="img-fluid" src="../img/design.svg" alt="Modelado 3D de Deshitradadora de Fruta">
+            </h1>
+            <h2 class="subName"></h2>
+        </section>
+        <!--=========FIN Encabezado=========-->       
+    </main>    
+    <!--==================FIN Cuerpo==================-->
+    
+    <!--=======Footer=======-->
+    <footer id="footer">
+        <div class="background ">
+            <div class="footer-top container">
+                <div class="footer-contact">
+                    <h4>Soledad Priano</h4>
+                    <p>Designer industriale</p>
+                    <strong>Email:</strong> soledadpriano@gmail.com <br>
                 </div>
-            </section>
-        <!--=======FIN About Section=======-->
-
-        <!--=======Skills Section=======-->
-            <section id="skills">
-                <div class="container">
-                    <div class="row skills-content">
-                        <div class="col-lg-6">
-                            <div class="progress">
-                                <span class="skill">Solidworks<i class="val">100%</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width:100%" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="progress">
-                                <span class="skill">Solid Edge<i class="val">90%</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width:90%" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>          
-                            <div class="progress">
-                                <span class="skill">Adobe Ilustrator<i class="val">80%</i></span>
-                                    <div class="progress-bar-wrap">
-                                <div class="progress-bar" style="width:80%" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="progress">
-                                <span class="skill">HTML<i class="val">60</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width:60%" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="progress">
-                                <span class="skill">Autocad 2D<i class="val">80%</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width:80%" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="progress">
-                                <span class="skill">Autodesk Inventor<i class="val">75%</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width:75%" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="progress">
-                                <span class="skill">Adobe Photoshop<i class="val">50%</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width:50%" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="progress">
-                                <span class="skill">CSS<i class="val">60%</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width:60%" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!--=======FIN Skills Section=======-->
-        </main>
-        <!--==================FIN Cuerpo==================-->
-        
-        <!--=======Footer=======-->
-        <footer id="footer">
-            <div class="background ">
-                <div class="footer-top container">
-                    <div class="footer-contact">
-                        <h4>Soledad Priano</h4>
-                        <p>Diseñadora Industrial</p>
-                        <strong>Email:</strong> soledadpriano@gmail.com<br>
-                    </div>
-                </div>               
-                <div class="socialFooter container d-md-flex">
-                    <div class="social-links text-center text-md-right pt-3 pt-md-0">
-                        <a href="https://www.behance.net/" target="blank">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/in/soledad-priano/" target="blank">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a href="https://www.instagram.com/" target="blank">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://github.com/SoleP" target="blank">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
+            </div>          
+            <div class="socialFooter container d-md-flex">
+                <div class="social-links text-center text-md-right pt-3 pt-md-0">              
+                    <a href="https://www.behance.net/soleadadpriano" target="blank">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/soledad-priano/" target="blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://www.instagram.com/travell.arg/" target="blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/SoleP" target="blank">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </div>
             </div>
-            <!--=========Back to Top=========-->
-            <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
-            <script>
-                //Get the button
-                var mybutton = document.getElementById("myBtn");               
-                // When the user scrolls down 20px from the top of the document, show the button
-                window.onscroll = function() {scrollFunction()};                
-                function scrollFunction() {
-                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                    mybutton.style.display = "block";
-                } else {
-                    mybutton.style.display = "none";
-                }
-                }
-                // When the user clicks on the button, scroll to the top of the document
-                function topFunction() {
-                document.body.scrollTop = 0;
-                document.documentElement.scrollTop = 0;
-                }
-            </script>
-            <!--=========FIN Back to Top=========-->
-        </footer>
-        <!--=========FIN Footer=========-->
-    </body>
-</html> 
+        </div>     
+        <!--=========Back to Top=========-->
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
+        <script>
+            //Get the button
+            var mybutton = document.getElementById("myBtn");
+            // When the user scrolls down 20px from the top of the document, show the button
+            window.onscroll = function() {scrollFunction()};
+            function scrollFunction() {
+              if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+              } else {
+                mybutton.style.display = "none";
+              }
+            }
+            // When the user clicks on the button, scroll to the top of the document
+            function topFunction() {
+              document.body.scrollTop = 0;
+              document.documentElement.scrollTop = 0;
+            }
+        </script>     
+       <!--=========END Back to Top=========-->
+    </footer>
+    <!--=========END Footer=========-->
+</body>
+</html>
