--- a/Italiano/coco-IT.html
+++ b/Italiano/coco-IT.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,33 +80,33 @@
             <div class="navbar-menu container collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="index-ES.html" class="nav-link">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="../Italiano/index-IT.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="about-ES.html" class="nav-link">About me</a>
+                        <a class="nav-link text-white" href="../Italiano/about-IT.html" class="nav-link">Su di me</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="portfolio-ES.html" 
+                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="" 
                             id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Portfolio
                         </a> 
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="vertigo-ES.html">Vertigo</a></li>
-                            <li><a class="dropdown-item" href="cva-ES.html">CVA SA</a></li>
-                            <li><a class="dropdown-item" href="interieur-ES.html">Interieur Forma</a></li>
-                            <li><a class="dropdown-item" href="bikes-ES.html">Bikes Station</a></li>
-                            <li><a class="dropdown-item" href="coco-ES.html">Coconut Milk</a></li>
-                            <li><a class="dropdown-item" href="dandii-ES.html">Dandii</a></li>
-                            <li><a class="dropdown-item" href="renders-ES.html">3D models & Renders</a></li>
-                            <li><a class="dropdown-item" href="upa-ES.html">Upa!</a></li>
-                            <li><a class="dropdown-item" href="portfolio-ES.html">See All</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/vertigo-IT.html">Vertigo</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/cva-IT.html">CVA SA</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/interieur-IT.html">Interieur Forma</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/bikes-IT.html">Portabiciclette</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/coco-IT.html">Latte di cocco</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/dandii-IT.html">Dandii</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/renders-IT.html">Modellazione 3D e Renderss</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/upa-IT.html">Upa!</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/portfolio-IT.html">Vedere tutto</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#skills" class="nav-link">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#footer" class="nav-link">Contact</a>
+                        <a class="nav-link text-white" href="#footer" class="nav-link">Contactto</a>
                     </li>
                 </ul>
             </div>
@@ -131,153 +131,37 @@
     </nav>    
     <!--=========FIN Menu=========-->
 
-    <!-- ========= Cuerpo ========= -->
-    <main id="home container-fluid">
-
-        <!--  ========= Encabezado =========  -->
-        <section  id="title" class="title container-fluid">
-            <h1 class="name subpage">Leche de Coco</h1>
+    <!--=========Cuerpo=========-->
+    <main id="home">
+        <!--=========Encabezado=========-->
+        <section  id="title" class="title container-fluid bg-light">
+            <h1 class="name"><img class="img-fluid" src="../img/design.svg" alt="Modelado 3D de Deshitradadora de Fruta">
+            </h1>
             <h2 class="subName"></h2>
         </section>
-        <!--  ========= FIN Encabezado =========  -->
-
-        <!-- ======= Breadcrumbs ======= -->                        
-        <nav aria-label="breadcrumb" class="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index-ES.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="portfolio-ES.html">Portfolio</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Coconut Milk</li>
-            </ol>
-        </nav>          
-        <!-- ======= FIN Breadcrumbs  ======= -->
-        <!-- ======= Portfolio ======= -->
-        <div id="portfolio-container">
-            <section id="portfolio-details" class="portfolio-details">
-                <div class="container">        
-                    <div class="row gy-4">            
-                        <div class="col-lg-8">
-                            <div class="portfolio-details-slider swiper-container">
-                                <div class="photo-slide swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-04.png" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-01.png" alt="">
-                                    </div>                    
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-02.png" alt="">
-                                    </div>                    
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-03.png" alt="">
-                                    </div>                                                                       
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-05.png" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-06.png" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-07.png" alt="">
-                                    </div>                                    
-                                </div>
-                                <div class="swiper-pagination"></div>
-                            </div>
-                        </div>                
-                        <div class="col-lg-4 side-text">
-                            <div class="portfolio-info">
-                                <h3>Leche de Coco</h3>
-                                <ul>
-                                    <li><strong>Categorias</strong>: Packaging / 3D model</li>
-                                    <li><strong>Cliente</strong>: Celebes: Leche de Coco</li>
-                                    <li><strong>Tecnologías usadas</strong>: Solidworks - Keyshot </li>
-                                </ul>
-                            </div>
-                            <div class="portfolio-description">
-                                <h3 class="description-title">Diseño de Packaging</h3>
-                                <p class="descripcion">
-                                    Modelado de familia de productos basada en leche de coco. Su forma redonda se debe a la formas del fruto. 
-                                    La marca cuenta con dos sachetes recargables; uno de 1 litro y el otro de 1.5 litros. 
-                                    Al volcar el contenido en su envase primario se provee al usuario de una iman para color en el refrigerador
-                                    con datos de fabricacion y fecha de caducidad, asi evitando la perdida de esta informacion. 
-                                    A su vez el envase contiene una seccion para colocar la fecha de colocacion.
-                                </p>                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>           
-            <section id="portfolio-details" class="portfolio-details">
-                <div class="container">        
-                    <div class="row gy-4">            
-                        <div class="col-lg-8">
-                            <div class="portfolio-details-slider swiper-container">
-                                <div class="photo-slide swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-01.png" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-02.png" alt="">
-                                    </div>                    
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-03.png" alt="">
-                                    </div>                    
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-04.png" alt="">
-                                    </div>                                                                       
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-05.png" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-06.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="swiper-pagination"></div>
-                            </div>
-                        </div>                
-                        <div class="col-lg-4 side-text">
-                            <div class="portfolio-info">
-                                <h3>Leche de coco</h3>
-                                <ul>
-                                    <li><strong>Category</strong>: Exibition Stand / 3D model</li>
-                                    <li><strong>Client</strong>: Celebes: Leche de coco</li>
-                                    <li><strong>Technologies used</strong>: Solidworks - Keyshot </li>
-                                </ul>
-                            </div>
-                            <div class="portfolio-description">
-                                <h3 class="description-title">Stand exibidor</h3>
-                                <p class="descripcion">
-                                    Stand exibidor para la familia de producto "celebes". Uso de la morfologia
-                                    del coco y uso de los colores del producto inicial.
-                                </p>                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>      
-        </div>
-        <!-- ================== FIN Portfolio ==================-->         
+        <!--=========FIN Encabezado=========-->       
     </main>    
-    <!-- ================== FIN Cuerpo ================== -->
-
-    <!-- ======= Footer ======= -->
+    <!--==================FIN Cuerpo==================-->
+    
+    <!--=======Footer=======-->
     <footer id="footer">
         <div class="background ">
             <div class="footer-top container">
                 <div class="footer-contact">
                     <h4>Soledad Priano</h4>
-                    <p>Diseñadora Indutrial</p>
-                    <strong>Email:</strong> soledadpriano@gmail.com<br>
+                    <p>Designer industriale</p>
+                    <strong>Email:</strong> soledadpriano@gmail.com <br>
                 </div>
-            </div>            
+            </div>          
             <div class="socialFooter container d-md-flex">
-                <div class="social-links text-center text-md-right pt-3 pt-md-0">                   
-                    <a href="https://www.behance.net/" target="blank">
+                <div class="social-links text-center text-md-right pt-3 pt-md-0">              
+                    <a href="https://www.behance.net/soleadadpriano" target="blank">
                         <i class="fab fa-behance"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/soledad-priano/" target="blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://www.instagram.com/" target="blank">
+                    <a href="https://www.instagram.com/travell.arg/" target="blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="https://github.com/SoleP" target="blank">
@@ -285,37 +169,29 @@
                     </a>
                 </div>
             </div>
-        </div>
-                
-       <!--  ========= Back to Top  =========  -->
+        </div>     
+        <!--=========Back to Top=========-->
         <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
         <script>
             //Get the button
-            var mybutton = document.getElementById("myBtn");            
+            var mybutton = document.getElementById("myBtn");
             // When the user scrolls down 20px from the top of the document, show the button
-            window.onscroll = function() {scrollFunction()};            
+            window.onscroll = function() {scrollFunction()};
             function scrollFunction() {
               if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
                 mybutton.style.display = "block";
               } else {
                 mybutton.style.display = "none";
               }
-            }            
+            }
             // When the user clicks on the button, scroll to the top of the document
             function topFunction() {
               document.body.scrollTop = 0;
               document.documentElement.scrollTop = 0;
             }
-        </script>            
-       <!--=========FIN Back to Top  =========  -->
+        </script>     
+       <!--=========END Back to Top=========-->
     </footer>
-    <!--  ========= FIN Footer  =========  -->
-
-    <!-- Vendor JS Files -->
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>    
-    <!-- Template Main JS File -->
-    <script src="../assets/js/main.js"></script>      
+    <!--=========END Footer=========-->
 </body>
-
-</html> 
+</html>
