--- a/Italiano/vertigo-IT.html
+++ b/Italiano/vertigo-IT.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,10 +79,10 @@
             <div class="navbar-menu container collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="../Espanol/index-ES.html" class="nav-link">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="../Italiano/index-IT.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../Espanol/about-ES.html" class="nav-link">Sobre mi</a>
+                        <a class="nav-link text-white" href="../Italiano/about-IT.html" class="nav-link">Su di me</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="" 
@@ -90,22 +90,22 @@
                             Portfolio
                         </a> 
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="../Espanol/vertigo-ES.html">Vertigo</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/cva-ES.html">CVA SA</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/interieur-ES.html">Interieur Forma</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/bikes-ES.html">Biciletero</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/coco-ES.html">Leche de coco</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/dandii-ES.html">Dandii</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/renders-ES.html">Modelado 3D & Renders</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/upa-ES.html">Upa!</a></li>
-                            <li><a class="dropdown-item" href="../Espanol/portfolio-ES.html">Ver todo</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/vertigo-IT.html">Vertigo</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/cva-IT.html">CVA SA</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/interieur-IT.html">Interieur Forma</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/bikes-IT.html">Portabiciclette</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/coco-IT.html">Latte di cocco</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/dandii-IT.html">Dandii</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/renders-IT.html">Modellazione 3D e Renderss</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/upa-IT.html">Upa!</a></li>
+                            <li><a class="dropdown-item" href="../Italiano/portfolio-IT.html">Vedere tutto</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#skills" class="nav-link">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#footer" class="nav-link">Contacto</a>
+                        <a class="nav-link text-white" href="#footer" class="nav-link">Contactto</a>
                     </li>
                 </ul>
             </div>
@@ -130,109 +130,37 @@
     </nav>    
     <!--========= FIN Menu=========-->
 
-    <!-- ========= Cuerpo ========= -->
-    <main id="home container-fluid">
-        <!--  ========= Encabezado =========  -->
-        <section  id="title" class="title container-fluid">
-            <h1 class="name subpage">Vertigo</h1>
+    <!--=========Cuerpo=========-->
+    <main id="home">
+        <!--=========Encabezado=========-->
+        <section  id="title" class="title container-fluid bg-light">
+            <h1 class="name"><img class="img-fluid" src="../img/design.svg" alt="Modelado 3D de Deshitradadora de Fruta">
+            </h1>
             <h2 class="subName"></h2>
         </section>
-        <!--  ========= FIN Encabezado =========  -->
-        <!-- ======= Breadcrumbs ======= -->                        
-        <nav aria-label="breadcrumb" class="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index-ES.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="portfolio-ES.html">Portfolio</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Vertigo</li>
-            </ol>
-        </nav>          
-        <!-- =======  FIN BreadcrumbS ======= -->
-        <!--  ========= Portfolio =========  -->         
-        <section class="portfolio" id="portfolio">           
-            <div class="gallery-wrap">            
-                <div class="portfolio-description">                    
-                    <p class="descripcion">
-                        Sistema de limpieza en altura para edificios con piel de vidrio. Su diseño está basado en la funcionalidad de dos 
-                        rodillos: superior e inferior. El primero es el más grande y es el encargado de la primera limpieza. Sus cerdas 
-                        son anchas y con menos “pelos”. Por otro lado, el rodillo superior, está a cargo de la limpieza fina y el secado,
-                         ya que este gira al doble de velocidad que el primero. En conjunto a los rodillos, cuenta con un sistema de 
-                         aspersores que rocían los vidrios con agua filtrada. Este diseño se encuentra Patente en el IMPI y participo en 
-                         “Argentina Innovar 2018”.
-                    </p>                    
-                </div>
-                <div class="portfolio-EN gallery-image prototypes">
-                    <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/vertigo/renders/render-03.png" alt="Prototipo de sistema de limpieza para ventanas de vidrio"/>
-                        <div class="cap1">
-                            <h3 class="h3-mob">Vertigo</h3>
-                            <p class="p-mob">Modelado 3D</p>
-                        </div>
-                        <div class="cap2">
-                            <a href="../Espanol/vertigoModel-ES.html" class="text-center"><p class="p-see-mob">Leer mas</p></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-EN gallery-image prototypes">
-                    <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/vertigo/vertigo1-01.png" alt="Prototype of a window cleaner"/>
-                        <div class="cap1">
-                            <h3 class="h3-mob">Vertigo</h3>
-                            <p class="p-mob">Prototipo</p>
-                        </div>
-                        <div class="cap2">
-                            <a href="../Espanol/vertigoPrototype-ES.html" class="text-center"><p class="p-see-mob">Leer mas</p></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-EN gallery-image prototypes">
-                    <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/vertigo/inovar/inovar-04.png" alt="Prototype of a window cleaner"/>
-                        <div class="cap1">
-                            <h3 class="h3-mob">Vertigo</h3>
-                            <p class="p-mob">Inovar 2018</p>
-                        </div>
-                        <div class="cap2">
-                            <a href="../Espanol/vertigoInovar-ES.html" class="text-center"><p class="p-see-mob">Leer mas</p></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-EN gallery-image prototypes">
-                    <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/vertigo/Eureka-01.png" alt="Prototype of a window cleaner"/>
-                        <div class="cap1">
-                            <h3 class="h3-mob">Vertigo</h3>
-                            <p class="p-mob">Eureka - Canal Encuentro</p>
-                        </div>
-                        <div class="cap2">
-                            <a href="../Espanol/vertigoTV-ES.html" class="text-center"><p class="p-see-mob">Leer mas</p></a>
-                        </div>
-                    </div>
-                </div>
-            <div class="clr"></div>
-            </div>
-        </section>        
-        <!--  ========= FIN Portfolio =========  -->        
+        <!--=========FIN Encabezado=========-->       
     </main>    
-    <!-- ================== FIN Cuerpo ================== -->    
-    <!-- ======= Footer ======= -->
+    <!--==================FIN Cuerpo==================-->
+    
+    <!--=======Footer=======-->
     <footer id="footer">
         <div class="background ">
             <div class="footer-top container">
                 <div class="footer-contact">
                     <h4>Soledad Priano</h4>
-                    <p>Diseñadora Indutrial</p>
-                    <strong>Email:</strong> soledadpriano@gmail.com<br>
+                    <p>Designer industriale</p>
+                    <strong>Email:</strong> soledadpriano@gmail.com <br>
                 </div>
-            </div>            
+            </div>          
             <div class="socialFooter container d-md-flex">
-                <div class="social-links text-center text-md-right pt-3 pt-md-0">                   
-                    <a href="https://www.behance.net/" target="blank">
+                <div class="social-links text-center text-md-right pt-3 pt-md-0">              
+                    <a href="https://www.behance.net/soleadadpriano" target="blank">
                         <i class="fab fa-behance"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/soledad-priano/" target="blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://www.instagram.com/" target="blank">
+                    <a href="https://www.instagram.com/travell.arg/" target="blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="https://github.com/SoleP" target="blank">
@@ -240,37 +168,29 @@
                     </a>
                 </div>
             </div>
-        </div>            
-       <!--  ========= Back to Top  =========  -->
-       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
-       <script>
-           //Get the button
-           var mybutton = document.getElementById("myBtn");           
-           // When the user scrolls down 20px from the top of the document, show the button
-           window.onscroll = function() {scrollFunction()};           
-           function scrollFunction() {
-             if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-               mybutton.style.display = "block";
-             } else {
-               mybutton.style.display = "none";
-             }
-           }           
-           // When the user clicks on the button, scroll to the top of the document
-           function topFunction() {
-             document.body.scrollTop = 0;
-             document.documentElement.scrollTop = 0;
-           }
-       </script>           
-      <!--  ========= FIN Back to Top  =========  -->
+        </div>     
+        <!--=========Back to Top=========-->
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
+        <script>
+            //Get the button
+            var mybutton = document.getElementById("myBtn");
+            // When the user scrolls down 20px from the top of the document, show the button
+            window.onscroll = function() {scrollFunction()};
+            function scrollFunction() {
+              if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+              } else {
+                mybutton.style.display = "none";
+              }
+            }
+            // When the user clicks on the button, scroll to the top of the document
+            function topFunction() {
+              document.body.scrollTop = 0;
+              document.documentElement.scrollTop = 0;
+            }
+        </script>     
+       <!--=========END Back to Top=========-->
     </footer>
-
-    <!--  ========= FIN Footer  =========  -->
-    <!-- Vendor JS Files -->
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src=",./assets/vendor/swiper/swiper-bundle.min.js"></script>
-    
-    <!-- Template Main JS File -->
-    <script src="../assets/js/main.js"></script>      
+    <!--=========END Footer=========-->
 </body>
-
-</html> 
+</html>
